# UpTraderTestQuest

./: .gitignore  README.md  manage.py  pyproject.toml
templates/: base.html  index.html  tree.html
templates/exchange_menu/: tree.html
uptrader/: settings.py  urls.py  wsgi.py
uptrader/menu/: admin.py  apps.py  models.py  urls.py  views.py
uptrader/menu/migrations/: 0001_initial.py
uptrader/menu/templatetags/: menu_extract.py
